<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/img_lvmember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/icon_open_lvmember"
                android:contentDescription="@string/open" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/img_lvmember"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_memberName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_memberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp"
                    android:text="@string/click_detail"
                    android:textStyle="italic"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_fixmember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_fix"
                    android:contentDescription="@string/fix" />

                <ImageView
                    android:id="@+id/img_delmember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_del"
                    android:contentDescription="@string/delete" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:layout_marginTop="0dp"
            android:background="#CCCCCC" />

</LinearLayout>
